--- a/GroceryStoreManager/GroceryStore.MainApp/Views/CategoryPage.xaml
+++ b/GroceryStoreManager/GroceryStore.MainApp/Views/CategoryPage.xaml
@@ -1,16 +1,201 @@
-﻿<Page x:Class="GroceryStore.MainApp.Views.CategoryPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
-      xmlns:viewmodels="using:GroceryStore.MainApp.ViewModels"
-      mc:Ignorable="d"
-      xmlns:dxg="using:DevExpress.WinUI.Grid">
+﻿<Page
+    x:Class="GroceryStore.MainApp.Views.CategoryPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:subvm="using:GroceryStore.MainApp.ViewModels.CategoryVMs"
+    xmlns:local="using:GroceryStore.MainApp.Views"
+    xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
+    xmlns:viewmodels="using:GroceryStore.MainApp.ViewModels"
+    xmlns:dxe="using:DevExpress.WinUI.Editors"
+    xmlns:i="using:Microsoft.Xaml.Interactivity"
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
+    mc:Ignorable="d"
+    xmlns:dxg="using:DevExpress.WinUI.Grid">
 
-    <Grid x:Name="ContentArea">
+    <Grid
+        x:Name="ContentArea">
+        <Grid.RowDefinitions>
+            <RowDefinition
+                Height="auto" />
+            <RowDefinition
+                Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition
+                Width="30*" />
+            <ColumnDefinition
+                Width="16*" />
+        </Grid.ColumnDefinitions>
 
-        <dxg:GridControl ItemsSource="{x:Bind ViewModel.Source, Mode=OneWay}">
+        <!--Category-->
+
+        <CommandBar
+            Margin="0 0 0 10"
+            DefaultLabelPosition="Right"
+            Grid.Row="0"
+            Grid.Column="0">
+            <CommandBar.Content>
+                <AutoSuggestBox
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Bottom"
+                    PlaceholderText="Search customer"
+                    QueryIcon="Find"
+                    MinWidth="300" />
+            </CommandBar.Content>
+            <AppBarButton
+                Command="{x:Bind ViewModel.ReloadCommand, Mode=OneWay}"
+                Icon="Refresh"
+                Label="Refresh" />
+            <AppBarSeparator />
+            <AppBarButton
+                Command="{x:Bind ViewModel.AddCommand , Mode=OneWay}"
+                Icon="Add"
+                Label="Add" />
+            <AppBarButton
+                Command="{x:Bind ViewModel.EditCommand, Mode=OneWay}"
+                Icon="Edit"
+                Label="Edit"
+                IsEnabled="{x:Bind ViewModel.HasCurrent, Mode=OneWay}" />
+            <AppBarButton
+                Command="{x:Bind ViewModel.DeleteCommand, Mode=OneWay}"
+                Icon="Delete"
+                Label="Delete"
+                IsEnabled="{x:Bind ViewModel.HasCurrent, Mode=OneWay}" />
+        </CommandBar>
+
+        <dxg:GridControl
+            Grid.Row="1"
+            Grid.Column="0"
+            ItemsSource="{x:Bind ViewModel.Source, Mode=OneWay}"
+            SelectedItem="{x:Bind ViewModel.SelectedProductType, Mode=TwoWay}"
+            AutoGenerateColumns="False">
+            <dxg:GridControl.Columns>
+                <dxg:GridTextColumn
+                    Header="Category ID"
+                    FieldName="Id"
+                    AllowEditing="False" />
+                <dxg:GridTextColumn
+                    Header="Name (Product Type)"
+                    FieldName="Name"
+                    AllowEditing="False" />
+            </dxg:GridControl.Columns>
         </dxg:GridControl>
+
+        <!--The Edit part-->
+
+        <Grid
+            Grid.Column="1"
+            Grid.RowSpan="2"
+            Padding="30 0"
+            Margin="30"
+            CornerRadius="10"
+            BorderBrush="{StaticResource ThumbBorderThemeBrush}"
+            BorderThickness="1"
+            Background="{ThemeResource CardBackgroundFillColorSecondary}">
+            <Grid.Resources>
+                <DataTemplate
+                    x:Key="Form"
+                    x:DataType="subvm:FormVM">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition
+                                Height="auto" />
+                            <RowDefinition
+                                Height="auto" />
+                            <RowDefinition
+                                Height="auto" />
+                            <RowDefinition
+                                Height="auto" />
+                        </Grid.RowDefinitions>
+                        <TextBlock
+                            Margin="0 10"
+                            Grid.Row="0"
+                            Text="{Binding TitleText, Mode=OneTime}"
+                            Style="{StaticResource SubtitleTextBlockStyle}" />
+                        <TextBox
+                            Margin="0 10"
+                            Grid.Row="1"
+                            HorizontalAlignment="Stretch"
+                            Header="Name: "
+                            Text="{x:Bind Name, Mode=TwoWay}"
+                            IsReadOnly="{Binding Readonly, Mode=OneTime}" />
+                        <TextBlock
+                            Margin="0 10"
+                            Grid.Row="2"
+                            Visibility="{Binding ShouldDisplayError}"
+                            Text="{Binding ErrorMessage}"
+                            Foreground="{StaticResource SystemAccentColorDark1}" />
+                        <Grid
+                            Grid.Row="3"
+                            Margin="0 20">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition
+                                    Width="*" />
+                                <ColumnDefinition
+                                    Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Button
+                                Margin="0 0 5 0"
+                                Padding="10 5"
+                                HorizontalAlignment="Stretch"
+                                Grid.Column="0"
+                                Style="{StaticResource DefaultButtonStyle}"
+                                Background="{ThemeResource SystemColorInactiveCaptionBrush}"
+                                Content="Accept"
+                                Command="{Binding ConfirmCommand}" />
+                            <Button
+                                Margin="5 0 0 0"
+                                Padding="10 5"
+                                HorizontalAlignment="Stretch"
+                                Grid.Column="1"
+                                Style="{StaticResource DefaultButtonStyle}"
+                                Background="{ThemeResource SystemChromeHighColor}"
+                                Content="Cancel"
+                                Command="{x:Bind CancelCommand}" />
+                        </Grid>
+                    </Grid>
+                </DataTemplate>
+
+                <DataTemplate
+                    x:Key="OnNullForm">
+                    <StackPanel>
+                        <FontIcon
+                            Glyph="&#xE81E;"
+                            FontSize="28"
+                            Margin="0 5" />
+                        <TextBlock
+                            Text="Edit, delete an Category or Add one"
+                            Style="{StaticResource CaptionTextBlockStyle}" />
+                    </StackPanel>
+                </DataTemplate>
+
+                <local:FormDataTemplateSelector
+                    x:Key="FormDataTemplateSelector"
+                    OnNull="{StaticResource OnNullForm}"
+                    Form="{StaticResource Form}" />
+            </Grid.Resources>
+
+            <!--https://github.com/Microsoft/XamlBehaviors/wiki/DataTriggerBehavior-->
+            <!--https://stackoverflow.com/questions/36706547/changing-contenttemplate-using-datatriggerbehavior-in-uwp-->
+            <!--<i:Interaction.Behaviors>
+                <core:DataTriggerBehavior Binding="{x:Bind ViewModel.Form}" Value="">
+                </core:DataTriggerBehavior>
+            </i:Interaction.Behaviors>-->
+
+
+
+            <ContentControl
+                VerticalAlignment="Center"
+                HorizontalAlignment="Stretch"
+                VerticalContentAlignment="Stretch"
+                HorizontalContentAlignment="Stretch"
+                Content="{x:Bind ViewModel.CurrentForm, Mode=OneWay}"
+                ContentTemplateSelector="{StaticResource FormDataTemplateSelector}">
+            </ContentControl>
+
+        </Grid>
+
     </Grid>
 </Page>
