--- a/GroceryStoreManager/GroceryStore.MainApp/CustomControls/ContentDialogBase.xaml
+++ b/GroceryStoreManager/GroceryStore.MainApp/CustomControls/ContentDialogBase.xaml
@@ -10,6 +10,9 @@
         <Thickness x:Key="ContentDialogPadding">0</Thickness>
         <x:Double x:Key="ContentDialogMaxWidth">945</x:Double>
         <x:Double x:Key="ContentDialogMaxHeight">756</x:Double>
+        <SolidColorBrush
+            x:Key="SystemControlPageBackgroundBaseMediumBrush"
+            Color="#99000000" />
     </ContentDialog.Resources>
 
     <ContentPresenter />
