--- a/GroceryStoreManager/GroceryStore.MainApp/Styles/Controls.xaml
+++ b/GroceryStoreManager/GroceryStore.MainApp/Styles/Controls.xaml
@@ -1,15 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="using:GroceryStore.MainApp.Styles">
+<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:dxe="using:DevExpress.WinUI.Editors">
     <!--General-->
-    <Style TargetType="Button">
-        <Setter Property="Padding"
-                Value="5 3" />
-        <Setter Property="HorizontalAlignment"
-                Value="Center" />
-        <Setter Property="VerticalAlignment"
-                Value="Center" />
+    <Style
+        TargetType="Button">
+        <Setter
+            Property="Padding"
+            Value="5 3" />
+        <Setter
+            Property="HorizontalAlignment"
+            Value="Center" />
+        <Setter
+            Property="VerticalAlignment"
+            Value="Center" />
+    </Style>
+
+    <Style
+        TargetType="dxe:TextEdit">
+        <Setter
+            Property="IsSpellCheckEnabled"
+            Value="False" />
     </Style>
 
 </ResourceDictionary>
