--- a/GroceryStoreManager/GroceryStore.MainApp/Views/PopupView/LoginPopup.xaml
+++ b/GroceryStoreManager/GroceryStore.MainApp/Views/PopupView/LoginPopup.xaml
@@ -95,6 +95,7 @@
             <TextBlock
                 Grid.Row="9"
                 Margin="0 10"
+                TextWrapping="Wrap"
                 Text="{x:Bind ViewModel.ErrorMessage, Mode=OneWay}"
                 Foreground="{ThemeResource SystemErrorTextColor}" />
 
